--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AI Therapist</title>
@@ -12,7 +12,8 @@
     #userInput { width: 80%; padding: 10px; }
     #sendBtn { padding: 10px; }
   </style>
-</head>
+</link rel="stylesheet" href="style.css">
+
 <body>
   <h2>Talk to your AI therapist, Boss:</h2>
   <div id="moods">
