--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="style.css">
+
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AI Therapist</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
   <title>AI Therapist</title>
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; }
@@ -12,8 +19,7 @@
     #userInput { width: 80%; padding: 10px; }
     #sendBtn { padding: 10px; }
   </style>
-</link rel="stylesheet" href="style.css">
-
+</head>
 <body>
   <h2>Talk to your AI therapist, Boss:</h2>
   <div id="moods">
