--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     😟 <button onclick="setMood('stressed')">Stressed</button>
     😠 <button onclick="setMood('angry')">Angry</button>
   </div>
+<audio id="guidedAudio" controls style="display: none;"></audio>
 
   <div id="chatbox"></div>
 
